--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "github-markdown-css": "^5.8.1",
     "highlight.js": "^11.11.1",
     "katex": "^0.16.22",
     "markdown-it": "^14.1.0",
     "markdown-it-texmath": "^1.0.0",
+    "marked": "^16.2.1",
     "vue": "^3.5.18",
     "vue-router": "^4.5.1"
   },
