--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.2",
+    "echarts": "^5.6.0",
     "element-plus": "^2.11.2",
     "github-markdown-css": "^5.8.1",
     "highlight.js": "^11.11.1",
@@ -18,6 +19,7 @@
     "markdown-it-texmath": "^1.0.0",
     "marked": "^16.2.1",
     "vue": "^3.5.18",
+    "vue-echarts": "^7.0.3",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
