--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.2",
+    "axios": "^1.12.2",
     "echarts": "^5.6.0",
     "element-plus": "^2.11.2",
     "github-markdown-css": "^5.8.1",
